@@ -13,29 +13,30 @@ gtksourceview/language-specs/desktop.lang
 gtksourceview/language-specs/diff.lang
 gtksourceview/language-specs/html.lang
 gtksourceview/language-specs/fortran.lang
+gtksourceview/language-specs/gtkrc.lang
+gtksourceview/language-specs/haskell.lang
 gtksourceview/language-specs/idl.lang
 gtksourceview/language-specs/ini.lang
 gtksourceview/language-specs/java.lang
 gtksourceview/language-specs/javascript.lang
 gtksourceview/language-specs/latex.lang
 gtksourceview/language-specs/lua.lang
+gtksourceview/language-specs/makefile.lang
 gtksourceview/language-specs/msil.lang
+gtksourceview/language-specs/nemerle.lang
 gtksourceview/language-specs/pascal.lang
 gtksourceview/language-specs/perl.lang
 gtksourceview/language-specs/php.lang
 gtksourceview/language-specs/po.lang
 gtksourceview/language-specs/python.lang
+gtksourceview/language-specs/R.lang
 gtksourceview/language-specs/ruby.lang
 gtksourceview/language-specs/sh.lang
 gtksourceview/language-specs/sql.lang
-gtksourceview/language-specs/verilog.lang
-gtksourceview/language-specs/xml.lang
-gtksourceview/language-specs/haskell.lang
+gtksourceview/language-specs/tcl.lang
 gtksourceview/language-specs/texinfo.lang
 gtksourceview/language-specs/vbnet.lang
-gtksourceview/language-specs/nemerle.lang
-gtksourceview/language-specs/tcl.lang
+gtksourceview/language-specs/verilog.lang
 gtksourceview/language-specs/vhdl.lang
-gtksourceview/language-specs/R.lang
-gtksourceview/language-specs/gtkrc.lang
+gtksourceview/language-specs/xml.lang
 
