@@ -1,3 +1,7 @@
+2005-08-03  Paolo Borelli  <pborelli@katamail.com>
+
+	* gtksourceview/language-specs/makefile.lang: add makefile.lang.
+
 2005-08-03  Paolo Maggi  <paolo@gnome.org>
 
 	Fixed bug #171734: Updated SQL language specification
